# ProjetMemoire

./: .env  .gitignore  DOWNLOAD_INFO.md  GUIDE_TEST.md  README.md  arch.md  demo.py  explication.md  main.py  mkdocs.yml  pyproject.toml  test_basic.py  test_fixes.py  test_modeltype.py  test_modeltype_simple.py
docs/: changelog.md  deployment.md  faq.md  index.md  installation.md
docs/api/: config.md  models.md  orchestrator.md  utils.md
docs/architecture/: models.md  orchestrator.md  overview.md  preprocessing.md
docs/examples/: advanced.md  basic.md
docs/user-guide/: advanced.md  configuration.md  quickstart.md
scripts/: memory_test.py  model_manager.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  base.py  kim_wrapper.py  phi3_wrapper.py  smolvlm_wrapper.py
src/orchestrator/: controller.py  memory_engine.py
src/tests/: test_phi3.py
src/utils/: logging.py  memory_optimizer.py  preprocessing.py
